--- a/BubbleSample/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/BubbleSample/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -170,16 +170,17 @@ User Created=False
 Advanced=False
 
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/OpenWorld
+LastLevel=/Game/TestMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/UI/UI/Vite_giocatori.Vite_giocatori
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/UI/Vite_giocatori
-MRUItem1=/Game/UI/UI
-MRUItem2=/Game/TestMap
+MRUItem0=/Game/Blueprints/NewHUD
+MRUItem1=/Game/TestMap
+MRUItem2=/Game/UI/UI/Vite_giocatori
+MRUItem3=/Game/UI/UI
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -194,7 +195,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/UI
+ContentBrowserDrawer.SelectedPaths=/Game/UI/UI
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1382,4 +1383,120 @@ SequencerWidgets.LastCompileMethod=Unknown
 [Python]
 LastDirectory=
 RecentsFiles=/Users/Shared/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[DetailCustomWidgetExpansion]
+WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
+
+[DetailCategories]
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Clipping=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+Image.Layout=False
+Image.Appearance=True
+Image.Accessibility=False
+Image.Behavior=True
+Image.Render Transform=False
+Image.Performance=False
+Image.Clipping=False
+Image.Navigation=False
+Image.Localization=False
+Image.Events=False
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Accessibility=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+ProgressBar.Localization=True
+Widget.Layout=True
+Widget.Behavior=True
+Widget.Accessibility=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
+Widget.Localization=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Accessibility=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Performance=True
+HorizontalBox.Clipping=True
+HorizontalBox.Navigation=True
+HorizontalBox.Localization=True
+Vite_giocatori_C.Appearance=True
+Vite_giocatori_C.Input=True
+Vite_giocatori_C.Interaction=True
+Vite_giocatori_C.Designer=True
+Vite_giocatori_C.Performance=True
+Vite_giocatori_C.Layout=True
+Vite_giocatori_C.Behavior=True
+Vite_giocatori_C.Render Transform=True
+Vite_giocatori_C.Localization=True
+Vite_giocatori_C.Accessibility=True
+Vite_giocatori_C.Clipping=True
+Vite_giocatori_C.Navigation=True
+WorldPartitionRuntimeSpatialHash.RuntimeSettings=True
+WorldSettings.WorldPartitionSetup=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.World=True
+WorldSettings.Physics=True
+WorldSettings.Broadphase=True
+WorldSettings.Foliage=True
+WorldSettings.Landscape=True
+WorldSettings.Navigation=True
+WorldSettings.VR=True
+WorldSettings.Rendering=True
+WorldSettings.Audio=True
+WorldSettings.Tick=True
+WorldSettings.Networking=True
+NewHUD_C.Tick=True
+NewHUD_C.HUD=True
+NewHUD_C.Collision=True
+NewHUD_C.HLOD=True
+NewHUD_C.Physics=True
+NewHUD_C.WorldPartition=True
+NewHUD_C.Events=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+PropertyWrapper.Events=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_VariableSet.Events=True
+
+[DetailPropertyExpansion]
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" "
+Object="\"Object\" "
+Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" "
+Vite_giocatori_C="\"Object.Appearance.ColorAndOpacity\" "
+UserWidget="\"Object.Appearance.ColorAndOpacity\" "
+WorldPartitionRuntimeSpatialHash="\"Object\" "
+WorldPartitionRuntimeHash="\"Object\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
 
