--- a/BubbleSample/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/BubbleSample/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -170,11 +170,10 @@ User Created=False
 Advanced=False
 
 [EditorStartup]
-LastLevel=/Game/TestMap
+LastLevel=/Engine/Maps/Templates/OpenWorld
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/UI/UI/Vite_giocatori.Vite_giocatori
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/NewHUD
@@ -195,7 +194,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/UI/UI
+ContentBrowserDrawer.SelectedPaths=/Game/UI/UI/font
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -303,6 +302,8 @@ TreeViewWidth=0.300000
 
 [AssetEditorToolkitTabLocation]
 /Game/UI/UI.UI=1
+/Game/UI/UI/Vite_giocatori.Vite_giocatori=1
+/Game/Blueprints/NewHUD.NewHUD=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -364,7 +365,7 @@ PerWorldEditorSettings=(("/Game/TestMap.TestMap", (LoadedEditorRegions=((Min=(X=
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=38.500
-WindowSize=X=1512.000 Y=889.000
+WindowSize=X=1512.000 Y=886.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1385,8 +1386,8 @@ LastDirectory=
 RecentsFiles=/Users/Shared/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [DetailCustomWidgetExpansion]
-WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
+WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 
 [DetailCategories]
 TextBlock.Layout=True
