--- a/BubbleSample/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/BubbleSample/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -170,15 +170,16 @@ User Created=False
 Advanced=False
 
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/OpenWorld
+LastLevel=/Game/TestMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/UI/UI/Vite_giocatori.Vite_giocatori
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/NewHUD
+MRUItem0=/Game/UI/UI/Vite_giocatori
 MRUItem1=/Game/TestMap
-MRUItem2=/Game/UI/UI/Vite_giocatori
+MRUItem2=/Game/Blueprints/NewHUD
 MRUItem3=/Game/UI/UI
 
 [ContentBrowser]
@@ -194,7 +195,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/UI/UI/font
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1500,4 +1501,13 @@ WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
+CapsuleComponent="\"Object\" "
+ShapeComponent="\"Object\" "
+PrimitiveComponent="\"Object\" "
+
+[PluginBrowser]
+InstalledPlugins=WMFCodecs
+
+[MessageLog]
+LastLogListing=PIE
 
