--- a/BubbleSample/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/BubbleSample/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -178,21 +178,24 @@ LastLevel=/Game/Mainmenulevel
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/UI/UI/Vite_giocatori.Vite_giocatori
-OpenAssetsAtExit=/Game/UI/UI/Mainmenu.Mainmenu
+OpenAssetsAtExit=/Game/Blueprint/Characters/BP_MainCharacter.BP_MainCharacter
 OpenAssetsAtExit=/Game/UI/UI/Menugamemode.Menugamemode
+OpenAssetsAtExit=/Game/Blueprint/Characters/BP_Player1.BP_Player1
+OpenAssetsAtExit=/Game/Blueprint/Characters/BP_Player2.BP_Player2
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Mainmenulevel
-MRUItem1=/Game/UI/UI/Menugamemode
-MRUItem2=/Game/UI/UI/Mainmenu
-MRUItem3=/Game/Blueprint/Characters/BP_Player2
-MRUItem4=/Game/Blueprint/Characters/BP_Player1
-MRUItem5=/Game/Blueprint/Characters/BP_P2Test
-MRUItem6=/Game/Blueprint/Characters/BP_MainCharacter
-MRUItem7=/Game/UI/UI/Vite_giocatori
-MRUItem8=/Game/TestMap
-MRUItem9=/Game/Blueprints/NewHUD
-MRUItem10=/Game/UI/UI
+MRUItem0=/Game/Blueprint/Characters/BP_Player2
+MRUItem1=/Game/Blueprint/Characters/BP_Player1
+MRUItem2=/Game/Blueprint/Characters/BP_MainCharacter
+MRUItem3=/Game/Blueprint/BP_GameMode
+MRUItem4=/Game/Mainmenulevel
+MRUItem5=/Game/UI/UI/Menugamemode
+MRUItem6=/Game/UI/UI/Mainmenu
+MRUItem7=/Game/Blueprint/Characters/BP_P2Test
+MRUItem8=/Game/UI/UI/Vite_giocatori
+MRUItem9=/Game/TestMap
+MRUItem10=/Game/Blueprints/NewHUD
+MRUItem11=/Game/UI/UI
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -207,7 +210,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprint/Characters
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -326,6 +329,8 @@ TreeViewWidth=0.300000
 /Game/Blueprint/Characters/BP_Player2.BP_Player2=1
 /Game/Blueprint/Characters/BP_P2Test.BP_P2Test=1
 /Game/Mainmenulevel.Mainmenulevel:PersistentLevel.Mainmenulevel=1
+/Game/Blueprint/BP_GameMode.BP_GameMode=1
+/Game/UI/UI/Mainmenu.Mainmenu=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1734,13 +1739,19 @@ Mainmenulevel_C.Physics=True
 Mainmenulevel_C.WorldPartition=True
 Mainmenulevel_C.Events=True
 Button.Events=True
+BP_GameMode_C.Tick=True
+BP_GameMode_C.Classes=True
+BP_GameMode_C.Game=True
+BP_GameMode_C.GameMode=True
+BP_GameMode_C.Physics=True
+BP_GameMode_C.Events=True
 
 [DetailPropertyExpansion]
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" "
 Widget="\"Object\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
 Visual="\"Object\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
-Object="\"Object\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
+Object="\"Object\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" "
 Vite_giocatori_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 UserWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
