--- a/BubbleSample/Config/DefaultEngine.ini
+++ b/BubbleSample/Config/DefaultEngine.ini
@@ -3,6 +3,9 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/TestMap.TestMap
 EditorStartupMap=/Game/Mainmenulevel.Mainmenulevel
+GlobalDefaultGameMode=/Game/Blueprint/BP_GameMode.BP_GameMode_C
+bOffsetPlayerGamepadIds=True
+bUseSplitscreen=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
