local multi player added

--- a/BubbleSample/Config/DefaultGame.ini
+++ b/BubbleSample/Config/DefaultGame.ini
@@ -9,3 +9,6 @@ CompanyDistinguishedName=llll
 Homepage=www.www.it
 SupportContact=io@pippo.it
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
