--- a/BubbleSample/Config/DefaultEngine.ini
+++ b/BubbleSample/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/TestMap.TestMap
-EditorStartupMap=/Game/Mainmenulevel.Mainmenulevel
+EditorStartupMap=/Game/TestMap.TestMap
 GlobalDefaultGameMode=/Game/Blueprint/BP_GameMode.BP_GameMode_C
 bOffsetPlayerGamepadIds=True
 bUseSplitscreen=False
@@ -73,4 +73,7 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/UnrealEd.CookerSettings]
+bCompileBlueprintsInDevelopmentMode=False
 
